--- a/staticroot/1.html
+++ b/staticroot/1.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
-            <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="https://google.com" data-request-access="write"></script>
-
+<body>
+                <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="https://google.com" data-request-access="write"></script>
+</body>
 </html>
