--- a/staticroot/1.html
+++ b/staticroot/1.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-                <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="https://google.com" data-request-access="write"></script>
+                <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="https://botgod.site/auth/complete/telegram" data-request-access="write"></script>
 </body>
 </html>
